--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@nextui-org/react": "^2.4.1",
+    "@tailwindcss/forms": "^0.5.7",
     "@tauri-apps/api": "^1.5.6",
+    "flowbite": "^2.3.0",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "eslint": "^8",
