--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.4.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tauri-apps/api": "^1.5.6",
     "flowbite": "^2.3.0",
+    "heroicons": "^2.1.3",
     "next": "14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
