--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,10 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.6.4", features = [] }
 sysinfo = "0.30.12"
 anyhow = "1.0.86"
+image = "0.25.1"
+base64 = "0.22.1"
+mp4 = "0.14.0"
+
 
 
 [features]
