--- a/rust_dev/Cargo.toml
+++ b/rust_dev/Cargo.toml
@@ -4,5 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cronitor = "0.1.0"
+cronitor_macro = "0.1.0"
+cronitor_runtime = "0.1.0"
+ctor = "0.2.8"
 serde_json = "1.0.117"
 sysinfo = "0.30.12"
+
+
+
+
