--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,8 @@ chrono = "0.4.31"
 env_logger = "0.10.2"
 log = "0.4.21"
 imageproc = "0.23.0"
-
+io_plus = { version = "0.1.0", git = "https://github.com/floris-xlx/io_plus.git"}
+tokio = { version = "1.29.1", features = ["full"] }
 
 
 
